kubeflow-manifests/common/istio-1-17/istio-install/overlays/gke-gateway/kubeflow-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kubeflow-gateway
  namespace: istio-system
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: kubeflow-certificate

---

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kubeflow-route
  namespace: istio-system
  labels:
    gateway: kubeflow-gateway
spec:
  parentRefs:
  - name: kubeflow-gateway
  hostnames:
  - kubeflow.<<domain>>
  rules:
  - backendRefs:
    - name: istio-ingressgateway
      port: 80
